--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@ https://wiki.mozilla.org/MDN/Development/Redesign/Testing">Here\'s how you can h
   <!-- Header -->
   <header id="main-header"><div class="center">
     
-    <ul class="offscreen">
+    <ul class="access-nav">
       <li><a href="#language">{{ _('Select language') }}</a></li>
       {% if not is_sphinx %}
         <li><a href="#q" id="skip-search">{{ _('Skip to search') }}</a></li>
