--- a/media/redesign/stylus/mixins.styl
+++ b/media/redesign/stylus/mixins.styl
@@ -290,8 +290,9 @@ bidi-value(prop, ltr, rtl, make-important = false) {
 
   &.only-icon {
     {selector-icon} {
-      margin-left: 0;
-      margin-top: -1px;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      margin-top: -1px !important;
     }
 
     span {
