fix bug 948863 - Prevent extra space at the bottom of templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -222,7 +222,7 @@
   {% block masthead %}{% endblock %}
 
   <!-- Content will go here -->
-  <main id="content" role="main"><div class="center">
+  <main id="content" role="main"><div class="center clear">
   {{ page_content() }}
   </div></main>
 
