--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,8 @@
 
 {% macro site_js() %}
   {% block site_js %}
+
+      {{ js('jquery') }}
       <script src="//mozorg.cdn.mozilla.net/{{ request.locale }}/tabzilla/tabzilla.js" async></script>
       <script src="//www.google.com/jsapi" type="text/javascript"></script>
       <script src="https://login.persona.org/include.js" type="text/javascript"></script>
