--- a/templates/includes/config.html
+++ b/templates/includes/config.html
@@ -10,6 +10,10 @@
     gettext: function(x) { return x; },
     // The path to media (images, CSS, JS) in MDN
     mediaPath: '{{ MEDIA_URL }}',
+    // Waffles flags
+    waffles: {
+      redesign: 1
+    },
     // Wiki-specific settings will be placed here
     wiki: {
       autosuggestTitleUrl: '{{ url('wiki.autosuggest_documents') }}'
