--- a/apps/wiki/templates/wiki/new_document.html
+++ b/apps/wiki/templates/wiki/new_document.html
@@ -47,6 +47,10 @@
 
       </header>
 
+      <p class="guide-links">
+        <a class="button" target="_blank" href="{{ devmo_url('Project:MDN/Contributing/Editor_guide') }}">Editor Guide</a>
+        <a class="button" target="_blank" href="{{ devmo_url('Project:MDN/Style_guide') }}">Style Guide</a>
+      </p>
       {% if is_template %}
         {{ revision_form.content|safe }}
         <div id="ace_content"></div>
