--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -672,6 +672,10 @@ span.cke_skin_kuma {
   }
 }
 
+.guide-links{
+  float:right;
+}
+
 .metadata-choose-parent {
   compat-important(background, light-background-color);
   compat-important(border, 0);
