--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -625,6 +625,10 @@ div.bug, div.warning, div.overheadIndicator {
   border: 1px solid #eaeff2;
 }
 
+.editor-container {
+  clear: both;
+}
+
 span.cke_skin_kuma {
   padding: 0 !important;
 }
@@ -689,7 +693,9 @@ span.cke_skin_kuma {
 }
 
 .guide-links{
-  float:right;
+  float: right;
+  padding: 0 4px 2px 0;
+  color: #999;
 }
 
 .metadata-choose-parent {
