--- a/apps/wiki/templates/wiki/edit_document.html
+++ b/apps/wiki/templates/wiki/edit_document.html
@@ -127,15 +127,13 @@
         </header>
 
         {% if revision_form %}
-            <p class="guide-links">
-              <a class="button" target="_blank" href="{{ devmo_url('Project:MDN/Contributing/Editor_guide') }}">Editor Guide</a>
-              <a class="button" target="_blank" href="{{ devmo_url('Project:MDN/Style_guide') }}">Style Guide</a>
-            </p>
+            {% include 'wiki/includes/guide_links.html' %}
+            
             {% if document.is_template %}
               {{ revision_form.content | safe }}
-              <div id="ace_content"></div>
+              <div id="ace_content" class="editor-container"></div>
             {% else %}
-              <div class="ckeditor-container">{{ revision_form.content | safe }}</div>
+              <div class="ckeditor-container editor-container">{{ revision_form.content | safe }}</div>
             {% endif %}
 
             <input type="hidden" name="form" value="rev" />
