--- a/apps/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/apps/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -1,2 +1,15 @@
+<!-- Production ready CKEditor scripts -->
+<!--
 <script src="{{ MEDIA_URL }}js/libs/ckeditor/build/ckeditor/ckeditor.js?build={{ BUILD_ID_JS }}"></script>
 <script src="{{ MEDIA_URL }}js/libs/ckeditor/build/ckeditor/adapters/jquery.js?build={{ BUILD_ID_JS }}"></script>
+-->
+
+<!-- Development version -->
+<script src="{{ MEDIA_URL }}js/libs/ckeditor/source/ckeditor/ckeditor.js?build={{ BUILD_ID_JS }}"></script>
+<script src="{{ MEDIA_URL }}js/libs/ckeditor/source/ckeditor/adapters/jquery.js?build={{ BUILD_ID_JS }}"></script>
+<script>
+  // Define the path to non-core plugins.
+  ['scayt', 'wsc'].forEach(function(pluginName) {
+    CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
+  });
+</script>
