--- a/templates/includes/google_analytics.html
+++ b/templates/includes/google_analytics.html
@@ -1,40 +1,78 @@
 {% if config.GOOGLE_ANALYTICS_ACCOUNT != '0' %}
-<script type="text/javascript">
-  // http://cfsimplicity.com/61/removing-analytics-clutter-from-campaign-urls
-  var removeUtms  =   function(){
-      var location = window.location;
-      if (location.hash.indexOf('utm') != -1) {
-          var anchor = location.hash.match(/#(?!utm)[^&]+/);
-          anchor  =   anchor ? anchor[0] : '';
-          if(!anchor && window.history.replaceState){
-              history.replaceState({}, '', location.pathname + location.search);
-          } else {
-              location.hash = anchor;
+
+    {% if waffle.flag('new_analytics') %}
+
+    <script>
+        // Initialize Google Analytics
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        // Create the tracker
+        ga('create', 'config.GOOGLE_ANALYTICS_ACCOUNT', 'auto');
+
+        // Allow anchor tracking
+
+
+        // Set custom vars
+        {% if request.user.is_authenticated() %}
+            ga('set', 'Signed-In', 'Yes');
+            {% if request.user.get_profile().beta_tester %}
+                ga('set', 'Beta Tester', 'Yes');
+            {% endif %}
+        {% endif %}
+        {% if waffle.flag('search_doc_navigator') %}
+            ga('set', 'Docs Navigator', 'Yes');
+        {% endif %}
+
+
+        // Track the initial page view
+        ga('send', 'pageview');
+    </script>
+
+
+
+    {% else %}
+    <script type="text/javascript">
+      // http://cfsimplicity.com/61/removing-analytics-clutter-from-campaign-urls
+      var removeUtms  =   function(){
+          var location = window.location;
+          if (location.hash.indexOf('utm') != -1) {
+              var anchor = location.hash.match(/#(?!utm)[^&]+/);
+              anchor  =   anchor ? anchor[0] : '';
+              if(!anchor && window.history.replaceState){
+                  history.replaceState({}, '', location.pathname + location.search);
+              } else {
+                  location.hash = anchor;
+              }
           }
-      }
-  };
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '{{ config.GOOGLE_ANALYTICS_ACCOUNT }}'],
-            ['_setAllowAnchor', true],
-{% if request.user.is_authenticated() %}
-            ['_setCustomVar', 7, 'Signed-In', 'Yes', 1],
-{% if request.user.get_profile().beta_tester %}
-            ['_setCustomVar', 9, 'Beta Tester', 'Yes', 1],
-{% endif %}
-{% endif %}
-{% if waffle.flag('search_doc_navigator') %}
-            ['_setCustomVar', 8, 'docs navigator', 'Yes', 1],
-{% endif %}
-            ['_trackPageview']);
-  _gaq.push(removeUtms);
+      };
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', '{{ config.GOOGLE_ANALYTICS_ACCOUNT }}'],
+                ['_setAllowAnchor', true],
+    {% if request.user.is_authenticated() %}
+                ['_setCustomVar', 7, 'Signed-In', 'Yes', 1],
+    {% if request.user.get_profile().beta_tester %}
+                ['_setCustomVar', 9, 'Beta Tester', 'Yes', 1],
+    {% endif %}
+    {% endif %}
+    {% if waffle.flag('search_doc_navigator') %}
+                ['_setCustomVar', 8, 'docs navigator', 'Yes', 1],
+    {% endif %}
+                ['_trackPageview']);
+      _gaq.push(removeUtms);
 
-  {% set GA_FILE = 'u/ga_debug.js' if settings.TEMPLATE_DEBUG else 'ga.js' %}
+      {% set GA_FILE = 'u/ga_debug.js' if settings.TEMPLATE_DEBUG else 'ga.js' %}
 
-  (function(a, d) {
-    var ga = d.createElement(a); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == d.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/{{ GA_FILE }}';
-    var s = d.getElementsByTagName(a)[0]; s.parentNode.insertBefore(ga, s);
-  })('script', document);
+      (function(a, d) {
+        var ga = d.createElement(a); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == d.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/{{ GA_FILE }}';
+        var s = d.getElementsByTagName(a)[0]; s.parentNode.insertBefore(ga, s);
+      })('script', document);
 
-</script>
+    </script>
+
+    {% endif %}
+
 {% endif %}
