--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -127,13 +127,15 @@ home-involved-background-y = 50px;
         }
     }
 
-  .search-form {
-    padding: (grid-spacing * 2) 0;
+    .home-search-form {
+        padding: (grid-spacing * 2) 0;
 
-    input#home-q {
-        big-search();
-        color: #fff;
-        set-placeholder-style(color, #fff);
+        input {
+            big-search();
+            color: #fff;
+
+            set-placeholder-style(color, #fff);
+        }
     }
 }
 
