--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -145,7 +145,7 @@ home-involved-background-y = 50px;
     padding: 6px;
     position: relative;
 
-    .show-topics {
+    .show-filters {
         background-color: rgba(255, 255, 255, 0);
         box-shadow: none;
         color: #fff !important;
@@ -177,7 +177,7 @@ home-involved-background-y = 50px;
       }
 
       li {
-        a.search-ss {
+        a.search-suggestion {
           display: block;
           color: #fff;
           padding: 0 10px;
@@ -197,7 +197,7 @@ home-involved-background-y = 50px;
     .filters {
       display: inline-block;
 
-      span.topic {
+      span.filter {
         display: inline;
         text-transform: none !important;
         cursor: default !important;
