--- a/apps/landing/templates/landing/homepage.html
+++ b/apps/landing/templates/landing/homepage.html
@@ -35,7 +35,7 @@
         <label for="search-q-s" class="offscreen">{{ _('Search') }}</label>
         <input type="search" id="search-q-s" name="q" autocomplete="off" placeholder="{{ _('Search the docs') }}" size="45" />
         <button type="submit" class="offscreen">{{ _('Search') }}</button>
-        <button type="button" class="show-topics"><i class="icon-caret-down" aria-hidden="true"></i></button>
+        <button type="button" class="show-filters"><i class="icon-caret-down" aria-hidden="true"></i></button>
       </div>
       <ul class="suggestions" data-hidden="true" style="display:none"></ul>
     {% else %}
