--- a/apps/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/apps/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -9,7 +9,8 @@
 <script src="{{ MEDIA_URL }}js/libs/ckeditor/source/ckeditor/adapters/jquery.js?build={{ BUILD_ID_JS }}"></script>
 <script>
   // Define the path to non-core plugins.
-  'scayt,wsc,mdn-format,mdn-redirect,mdn-sampler,mdn-syntaxhighlighter,mdn-system-integration,mdn-toggle-block,tablesort'.split(',').forEach(function(pluginName) {
-    CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
-  });
+  'scayt,wsc,mdn-attachment,mdn-format,mdn-redirect,mdn-sampler,mdn-syntaxhighlighter,mdn-system-integration,mdn-toggle-block,tablesort'
+    .split(',').forEach(function(pluginName) {
+      CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
+    });
 </script>
