Upgrade to universal analytics

--- a/templates/404.html
+++ b/templates/404.html
@@ -54,6 +54,6 @@
 
 {% block js %}
 <script type="text/javascript">
-mdn.analytics.trackEvent(['Error', '404']);
+mdn.analytics.trackError('404: ' + window.location);
 </script>
 {% endblock %}
