--- a/apps/dashboards/templates/dashboards/revisions.html
+++ b/apps/dashboards/templates/dashboards/revisions.html
@@ -8,7 +8,6 @@
 {% block content %}
 
     <div class="dashboard">
-        {% include 'wiki/includes/wiki_notifier.html' %}
         <h1>{{ title }}</h1>
         <form method="get" id="revision-filter">
             <div class="revision-field">
@@ -62,7 +61,6 @@
     var $filterForm = $('#revision-filter');
     var $pageInput = $('#revision-page');
     var currentLocale = '{{ request.locale }}';
-    var notifier = $('.notifier').mozNotifier();
     var controlsTemplate = '\
     <div class="action-bar">\
         <ul id="page-buttons">\
@@ -156,14 +154,14 @@
             history.pushState(null, '', location.pathname + '?' + $this.serialize());
         }
 
-        notifier.setMessage('Hang on! Updating filters…').show();
+        var notification = mdn.Notifier.growl(gettext('Hang on! Updating filters…'), { duration: 0 });
         $.ajax({
             url: $this.attr('action'),
             data: $this.serialize()
         }).then(function (content) {
             replaceContent(content);
             $this.trigger('ajaxComplete');
-            notifier.success('Updated filters.').hide();
+            notification.success(gettext('Updated filters.'), 2000);
             // Reset the page count to 0 in case of new filter
             $pageInput.val(1);
         });
