--- a/media/redesign/stylus/main/components.styl
+++ b/media/redesign/stylus/main/components.styl
@@ -100,11 +100,102 @@
     reverse-link-decoration();
 }
 
+/* hoping to one day use these colours to generate most colours we use on MDN but just here for now */
+
+$red = #ea3b28;
+$yellow = #ffcb00;
+$green = #70a300;
+$blue = #0095dd;
+$grey = #c7ccce;
+
+$negative = $red;
+$warning = $yellow;
+$positive = $green;
+$neutral = $blue;
+$default = $grey;
+
+$text-dark = $text-color;
+$text-light = #fff;
+
+/* functions to transform the base colours into variations of themselves */
+
+theme-pale-light($color) {
+    return tint($color, 80%);
+}
+
+theme-pale-medium($color) {
+    $color = theme-pale-light($color);
+    $color = darken($color, 20%);
+    return $color;
+}
+
+theme-pale-dark($color) {
+    return darken($color, 20%);
+}
+
+/* functions to get correct text colours for variations of theme colours */
+
+theme-pale-text($color) {
+    $color = theme-pale-light($color);
+    $color = darken($color, 60%);
+    return $color;
+}
+
+theme-pale-contrast-text($color){
+    $hu = hue($color);
+    $lite = lightness($color);
+    $sat = saturation($color);
+    if (($hu < 20deg || $hu > 199deg) && $sat > 30% && $lite < 70%) {
+        $color = $text-light;
+    } else if ($lite < 50%) {
+        $color = $text-light;
+    } else {
+        $color = $text-dark;
+    }
+    return $color;
+}
+
+/* function to apply all the generated colours to a notification to theme it */
+
+notification-theme($color) {
+    background-color: theme-pale-light($color);
+    border-color: theme-pale-medium($color);
+    color: theme-pale-contrast-text(theme-pale-light($color));
+
+    .notification-button {
+        background-color: theme-pale-medium($color);
+        color: theme-pale-text($color);
+
+        &:hover, &:focus {
+          background: transparent;
+          text-decoration: none;
+        }
+    }
+
+    .notification-img i {
+        color: theme-pale-dark($color);
+    }
+
+    button.close {
+        color: theme-pale-medium($color);
+
+        &:hover, &:focus {
+            color: theme-pale-dark($color);
+        }
+    }
+
+}
+
+/* style notifications */
+
 .notification {
-    padding: 10px;
-    border-width: 2px;
+    @extends .media;
+    border-radius: 2px;
     border-style: solid;
-    border-radius: 4px;
+    border-width: 2px;
+    font-size: $smaller-font-size;
+    margin-bottom: ($grid-spacing / 2);
+    padding: ($grid-spacing / 2);
     position: relative;
 
     &.closed {
@@ -115,64 +206,76 @@
         cursor: pointer;
     }
 
-    /* theme: default */
-    background: rgba(#c7ccce, 0.5);
-    border-color: #c7ccce;
-
-    /* theme: fail */
-    &.negative {
-        background: rgba(#ea3b28, 0.5);
-        border-color: #ea3b28;
-        color: #fff;
-
-        button.close {
-            color: @border-color;
-        }
-    }
-
-    /* theme: warning */
-    &.warn {
-        background: rgba(#ffcb00, 0.5);
-        border-color: #ffcb00;
-
-        button.close {
-            color: @border-color;
-        }
-    }
-
-    /* theme: success */
-    &.positive {
-        background: rgba(#70a300, 0.5);
-        border-color: #70a300;
-        color: #fff;
-
-        button.close {
-            color: @border-color;
-        }
-    }
-
+    /* little x button in top right corner */
     button.close {
+        background: transparent;
+        border: 0;
+        box-shadow: none;
+        display: block;
+        padding: 2px;
         position: absolute;
         top: 0;
-        right: 6px;
-        display: block;
-        color: @border-color;
-        padding: 2px;
-        background: transparent;
-        box-shadow: none;
+        right: 0px;
+    }
 
-        i {
-            font-size: 12px;
-        }
+    /* theme the various notification states */
+    notification-theme($default);
+
+    &.neutral {
+        notification-theme($neutral);
+    }
+
+    &.positive {
+        notification-theme($positive);
+    }
+
+    &.warning {
+        notification-theme($warning);
+    }
+
+    &.negative {
+        notification-theme($negative);
     }
 }
 
+.notification-message {
+    @extends .media-body; /* here incase there's an icon, has the added benfiit of acting like a clearfix */
+
+    /* remove margin from first element in message */
+     & *:first-child {
+        margin-top: 0;
+    }
+}
+
+/* optional icon, message displays fine without it */
+.notification-img {
+    @extends .media-img;
+
+    i[class^="icon-"] {
+        font-size: $larger-font-size;
+        margin: 0;
+    }
+}
+
+/* class to add to <button> and <a> to make them look buttony */
+.notification-button {
+    border: 1px solid;
+    border-radius: 2px;
+    box-shadow: none;
+    display: inline-block;
+    line-height: 1;
+    margin: 5px 5px 0 0;
+    padding: 2px 5px 3px;
+    text-transform: none;
+}
+
+
 .notification-tray {
-    width: 300px;
     position: fixed;
     top: 10px;
     right: 10px;
     z-index: 999999;
+    width: 300px;
 
     .notification {
         margin-bottom: 8px;
