--- a/kuma/users/templates/persona/auth.html
+++ b/kuma/users/templates/persona/auth.html
@@ -1,29 +1,20 @@
 <script src="https://login.persona.org/include.js"></script>
 <script type="text/javascript">
 (function($) {
-  var allauth = window.allauth = window.allauth || {};
-
-  function startWatching() {
-    navigator.id.watch({
-      onlogin: function(assertion) {
-        // TODO: next url handling
-        document.getElementById("_persona_assertion").value = assertion;
-        document.getElementById("_persona_login").submit();
-      },
-      onlogout: function() {
-        // TODO
-      }
-    })
-  };
-
-  allauth.persona = {
+  mdn.allauth.persona = {
     login: function(nextUrl, process) {
-        document.getElementById("_persona_next_url").value = nextUrl || '';
-        document.getElementById("_persona_process").value = process;
+        $('#_persona_next_url').val(nextUrl || '');
+        $('#_persona_process').val(process);
         $.get("{{ url('persona_csrf_token') }}").then(function(token) {
-            document.getElementById("_persona_csrf_token").value = token;
+            $('#_persona_csrf_token').val(token);
         });
-        startWatching();
+        navigator.id.watch({
+          onlogin: function(assertion) {
+            // TODO: next url handling
+            $('#_persona_assertion').val(assertion);
+            $('#_persona_login').submit();
+          }
+        });
         navigator.id.request({{ request_parameters|safe }});
     }
   }
