--- a/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -11,7 +11,7 @@
   // Define the path to non-core plugins.
   (
     'scayt,wsc,mdn-attachment,mdn-format,mdn-redirect,mdn-sample-finder,mdn-sampler,' +
-    'mdn-syntaxhighlighter,mdn-system-integration,mdn-toggle-block,tablesort'
+    'mdn-syntaxhighlighter,mdn-system-integration,mdn-toggle-block,descriptionlist,tablesort'
   ).split(',').forEach(function(pluginName) {
     CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
   });
