--- a/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -12,7 +12,7 @@
   (
     'scayt,wsc,mdn-attachment,mdn-link-launch,mdn-format,mdn-redirect,mdn-sample-finder,mdn-sampler,' +
     'mdn-syntaxhighlighter,mdn-system-integration,mdn-table-customization,mdn-toggle-block,descriptionlist,tablesort,' +
-    'texzilla'
+    'texzilla,youtube'
   ).split(',').forEach(function(pluginName) {
     CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
   });
