--- a/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -10,7 +10,7 @@
 <script>
   // Define the path to non-core plugins.
   (
-    'scayt,wsc,mdn-attachment,mdn-link-launch,mdn-format,mdn-redirect,mdn-sample-finder,mdn-sampler,' +
+    'scayt,wsc,mdn-attachment,mdn-link-launch,mdn-format,mdn-redirect,mdn-sample-finder,mdn-sampler,mdn-spell,' +
     'mdn-syntaxhighlighter,mdn-system-integration,mdn-table-customization,mdn-toggle-block,descriptionlist,tablesort,' +
     'texzilla,youtube'
   ).split(',').forEach(function(pluginName) {
