--- a/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
+++ b/kuma/wiki/templates/wiki/includes/ckeditor_scripts.html
@@ -12,7 +12,7 @@
   (
     'scayt,wsc,mdn-attachment,mdn-link-launch,mdn-format,mdn-image-attachment,mdn-redirect,mdn-sample-finder,' +
     'mdn-sampler,mdn-spell,mdn-syntaxhighlighter,mdn-system-integration,mdn-table-customization,mdn-toggle-block,' +
-    'descriptionlist,tablesort,texzilla,youtube'
+    'mdn-wrapstyle,descriptionlist,tablesort,texzilla,youtube'
   ).split(',').forEach(function(pluginName) {
     CKEDITOR.plugins.addExternal(pluginName, '{{ MEDIA_URL }}js/libs/ckeditor/source/plugins/' + pluginName + '/');
   });
