original message  Reviewer Walsh

--- a/media/redesign/stylus/wiki-wysiwyg.styl
+++ b/media/redesign/stylus/wiki-wysiwyg.styl
@@ -10,7 +10,7 @@ html.maximized {
 }
 body {
     font: 14px/1.5 'Open Sans', sans-serif;
-    padding: 0 $grid-spacing;
+    padding: $grid-spacing;
 }
 
 
