original message  Reviewer Walsh

--- a/media/redesign/stylus/wiki-edit.styl
+++ b/media/redesign/stylus/wiki-edit.styl
@@ -366,9 +366,10 @@ $summary-padding = 5px;
     max-height: 200px;
     overflow: auto;
 }
-.cke_skin_kuma .cke_rcombo .cke_text {
-    width: 130px !important;
+.cke_combo_text {
+    width: 100px !important;
 }
-.cke_skin_kuma .cke_rcombopanel {
-    height: 280px !important;
+.cke_combopanel {
+    width: 250px !important;
+    height: 300px !important;
 }
