Bug 1150118 - Lazy load fonts
Some clean up in anticipation of changes to font stuff:

- Use variable to set font family
- Use mixin to set font size
- Added Arial to fallback list (more size appropriate than Helvetia which is Mac sans-serif default)
- Line-height and letter-spacing should be relative to font-size not pixels

--- a/media/stylus/base/elements/typography.styl
+++ b/media/stylus/base/elements/typography.styl
@@ -17,7 +17,7 @@ h1, h2, h3, h4 {
 }
 
 h2, h3 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $site-font-family;
 }
 
 h2, h3, h4 {
@@ -40,12 +40,12 @@ h2 {
 
 h3 {
     set-font-size(24px);
-    letter-spacing: -0.5px;
+    letter-spacing: -0.021em;
 }
 
 h4 {
     set-font-size(18px);
-    letter-spacing: -0.25px;
+    letter-spacing: -0.014em;
 }
 
 /*
