--- a/media/stylus/components/content.styl
+++ b/media/stylus/components/content.styl
@@ -28,7 +28,7 @@ $table-blue = #d4dde4;
                 border: @border;
                 border-bottom: 2px solid rgba-fallback(rgba($table-blue, 1));
                 background: rgba-fallback(rgba($table-blue, 0.5));
-                font-family: 'Open Sans Light', sans-serif;
+                font-family: $heading-font-family;
                 font-size: 14px;
                 padding: 2px 8px 4px;
                 font-weight: bold;
