--- a/media/stylus/components/fellowship/cta.styl
+++ b/media/stylus/components/fellowship/cta.styl
@@ -30,11 +30,10 @@ Call to action button
         width: 100%;
         padding: 0.75rem;
         margin: 0px;
-        font-size: 1.6rem;
+        set-font-size(22px);
         line-height: 1;
         text-transform: uppercase;
         text-align: center;
-        font-family: "Open Sans",sans-serif;
         opacity: 1;
         visibility: visible;
         transition: opacity 0.2s ease-in-out 0s;
