--- a/media/stylus/components/fellowship/pullquote.styl
+++ b/media/stylus/components/fellowship/pullquote.styl
@@ -8,7 +8,7 @@ The quote on the fellowship page
         position: relative;
         background-color: inherit;
         border: none;
-        font-family: 'Open Sans Light', Arial, Helvetica, sans-serif;
+        font-family: $heading-font-family;
         font-style: italic;
         font-size: $larger-font-size;
         color: $neutral;
