--- a/media/stylus/components/wiki/customcss.styl
+++ b/media/stylus/components/wiki/customcss.styl
@@ -781,7 +781,7 @@ table.compat-table td.header {
     border: 1px solid rgba-fallback(rgba(212,221,228,0));
     background: none;
     font-weight: 200;
-    font-family: 'Open Sans Light', sans-serif;
+    font-family: $heading-font-family;
     font-size: 16px;
     line-height: 100%;
     padding: 2px 4px 8px;
@@ -874,7 +874,7 @@ ul.card-grid li {
     }
     .card-grid > li span {
         display: block;
-        font-family: 'Open Sans Light', Arial, Helvetica, sans-serif;
+        font-family: $heading-font-family;
         font-size: 22px;
         letter-spacing: -1px;
         line-height: 22px;
@@ -1553,7 +1553,7 @@ dd.landingPageList {
             display: inline;
             font-size: 14px;
             font-weight: 200;
-            font-family: 'Open Sans Light', sans-serif;
+            font-family: $heading-font-family;
             height: 32px;
             list-style-type: none;
             margin: auto;
@@ -1821,7 +1821,7 @@ a.addpage-button .right-align {
     border-right: none;
     vertical-align: top;
     padding: 6px;
-    font-family: "Open Sans", sans-serif;
+    font-family: $site-font-family;
     font-weight: bold;
     text-align: right;
 }
