--- a/media/stylus/components/wiki/edit/first-contrib-welcome.styl
+++ b/media/stylus/components/wiki/edit/first-contrib-welcome.styl
@@ -8,7 +8,7 @@
 
     h2 {
         margin: 0 0 10px;
-        font: bold 18px/1.5 'Open Sans', sans-serif;
+        font: bold 18px/1.5 $site-font-family;
     }
 
     p {
