--- a/media/stylus/components/wiki/topicpage-table.styl
+++ b/media/stylus/components/wiki/topicpage-table.styl
@@ -20,7 +20,7 @@ body .topicpage-table {
 /* styles for elements inside .topicpage-table */
 .topicpage-table {
     h2 {
-        font-family: 'Open Sans Light', sans-serif;
+        font-family: $heading-font-family;
     }
 
     ul {
