--- a/media/stylus/wiki-wysiwyg.styl
+++ b/media/stylus/wiki-wysiwyg.styl
@@ -9,7 +9,7 @@ html.maximized {
     overflow-y: auto !important;
 }
 body {
-    font: 14px/1.5 'Open Sans', sans-serif;
+    font: 14px/1.5 $site-font-family;
     padding: $grid-spacing;
 }
 
