--- a/media/stylus/includes/vars.styl
+++ b/media/stylus/includes/vars.styl
@@ -41,8 +41,8 @@ $text-light = #fff;
 
 /* typography */
 $light-font-weight = 200;
-$site-font-family = 'Open Sans', sans-serif;
-$heading-font-family = 'Open Sans Light', sans-serif;
+$site-font-family = Arial, sans-serif;
+$heading-font-family = 'Helvetica', Arial, sans-serif;
 
 /* sizes */
 $larger-font-size = 20px;
